--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,6 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
+title: Zhe Xu's Homepage
+page-top-title: Zhe Xu
+top-section-bg-text: Electronic and Information Engineering
+home-subtitle: Zhe Xu&ensp;|&ensp;徐哲
 copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+
